<resources>
    <string name="app_name">GlimmerMind</string>
    <string name="logo">GlimmerMind</string>
    <string name="october_1">October 1</string>
    <string name="_8_00_a_m">8:00 A.M.</string>
    <string name="ipsum_lorem">Ipsum Lorem</string>
    <string name="patient">Patient</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="glimmermind_logo">GlimmerMind Logo</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="patient_notification">Patient Notification</string>
    <string name="appointment">Appointment</string>
    <string name="patient_appointment">Patient Appointment</string>
    <string name="home">Home</string>
    <string name="patient_home">Patient Home</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="next_page">Next Page</string>
    <string name="page_1_of_5">Page 1 of 5</string>
    <string name="previous_page">Previous Page</string>
    <string name="october_2025">October 2025</string>
    <string name="previous_month">Previous Month</string>
    <string name="next_month">Next Month</string>
    <string name="book_an_appointment">Book an Appointment</string>
    <string name="back">Back</string>
    <string name="november_24">November 24</string>
</resources>